--- a/oms/src/main/resources/application.properties
+++ b/oms/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=oms
 server.port=8081
 spring.main.banner-mode=off
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/oms_db
+spring.datasource.username=postgres
+spring.datasource.password=ajooplina
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
